--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "superagent": "^3.8.3",
     "superagent-charset": "^1.2.0",
     "superagent-proxy": "^1.0.3"
+  },
+  "dependencies": {
+    "exceljs": "^1.5.1"
   }
 }
